app/src/main/java/com/example/wocombo/core/domain/errors/EventFailures.kt
package com.example.wocombo.core.domain.errors

import com.example.wocombo.common.functional.Failure

sealed class EventFailures {
    object DownloadEventsFailure : Failure.FeatureFailure()
}